# dodge-ball-raylib

./: .gitignore  CMakeLists.txt  README.md
Application/: CMakeLists.txt
Application/Source/Inc/: App.h  EnemySpawnActorController.h  GameConfig.h  GameScene.h  PlayerActor.h  PlayerActorController.h  PlayerBallActor.h  PlayerBallController.h  PlayerBallModel.h
Application/Source/Inc/DataPack/: TestDataChunk.h
Application/Source/Src/: App.cpp  BallModel.cpp  EnemyActorController.cpp  EnemySpawnActorController.cpp  GameConfig.cpp  GameScene.cpp  Main.cpp  PlayerActor.cpp  PlayerActorController.cpp  PlayerBallActor.cpp  PlayerBallController.cpp  PlayerBallModel.cpp
CSV/: Ball.csv  Player.csv
Config/: AppConfig.yaml  CoreConfig.yaml  GameConfig.yaml
DataPack/DataChunkGenerator/Source/Inc/: BallDataPackParser.generated.h  DataChunkUtils.h  DataPackUtils.h  PlayerDataPackParser.generated.h
DataPack/DataChunkGenerator/Source/Src/: DataPackUtils.cpp  Main.cpp
DataPack/DataPack/: CMakeLists.txt
DataPack/DataPack/Source/: BallDataChunk.h  BallDataPack.generated.h  PlayerDataChunk.h  PlayerDataPack.generated.h
DataPack/DataPack/Source/Inc/: DataPackUtils.h
DataPack/DataPackGenerator/: CMakeLists.txt
DataPack/DataPackGenerator/Source/Src/: Main.cpp
DataPackGenerator/: CMakeLists.txt
DataPackGenerator/Source/Inc/: TestDataChunk.generated.h  TestDataPack.generated.h
DataPackGenerator/Source/Src/: Main.cpp
Engine/: CMakeLists.txt
Engine/Source/Inc/: Error.h  IActor.h  Result.h
Engine/Source/Inc/Actor/: IActor.h  IActorModel.h
Engine/Source/Inc/App/: AppContext.h
Engine/Source/Inc/Config/: IConfig.h
Engine/Source/Inc/Macro/: Macro.h
Engine/Source/Inc/Manager/: ConfigManager.h  DataChunkManager.h  InputManager.h
Engine/Source/Inc/Utils/: LogUtils.h
Engine/Source/Src/: Error.cpp  GameTimer.cpp
Engine/Source/Src/App/: AppHost.cpp
Engine/Source/Src/Manager/: ActorManager.cpp  ConfigManager.cpp  DataChunkManager.cpp  InputManager.cpp
Framework/: CMakeLists.txt
Framework/Source/Inc/: ActorManager.h  AppContext.h  AppHost.h  Error.h  ErrorUtils.h  FileUtils.h  GameAssert.h  GameTimer.h  GenericAssert.h  IActor.h  IManager.h  InputManager.h  Macro.h  StringUtils.h
Framework/Source/Inc/Actor/: IActor.h  IActorController.h
Framework/Source/Inc/App/: AppContext.h  IApp.h
Framework/Source/Inc/Config/: BaseConfig.h  CoreConfig.h  EngineConfig.h  IConfig.h
Framework/Source/Inc/Macro/: GameAssert.h  Macro.h
Framework/Source/Inc/Manager/: ActorManager.h  ConfigManager.h  DataChunkManager.h  IManager.h  RenderManager.h  SceneManager.h
Framework/Source/Inc/Render/: IRenderableModel.h
Framework/Source/Inc/Scene/: IScene.h
Framework/Source/Inc/Utils/: MathUtils.h
Framework/Source/Src/: ActorManager.cpp  AppContext.cpp  AppHost.cpp  Error.cpp  ErrorUtils.cpp  FileUtils.cpp  GameTimer.cpp  InputManager.cpp  StringUtils.cpp
Framework/Source/Src/App/: AppContext.cpp  AppHost.cpp
Framework/Source/Src/Config/: CoreConfig.cpp  EngineConfig.cpp
Framework/Source/Src/Manager/: ActorManager.cpp  ConfigManager.cpp  DataChunkManager.cpp  InputManager.cpp  RenderManager.cpp  SceneManager.cpp
Framework/Source/Src/Utils/: MathUtils.cpp
Resource/: Ball.bytes  Player.bytes  Test.csv  Test.xlsx  TestData.bytes
Tool/Batch/: Build.bat  BuildSolution.bat  ConvertAllXLSXToCSV.bat  GenerateAllDataPackHeader.bat  GenerateDataChunk.bat  GenerateDataPackHeader.bat  GenerateDataPackHeaders.bat
Tool/Script/: cli.py  cmake_executor.py  cmake_helper.py  config.py  data_pack_generator.py  xlsx_to_csv_converter.py
XLSX/: Ball.xlsx  Player.xlsx
