cmake_minimum_required(VERSION 3.30.3)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(APP_PROJECT_NAME "App")
set(APP_PROJECT_PATH ${CMAKE_CURRENT_SOURCE_DIR})

set(APP_SOURCE_PATH "${APP_PROJECT_PATH}/Source")
set(APP_PROJECT_HEADER_FILE_PATH "${APP_SOURCE_PATH}/Inc")
set(APP_PROJECT_SOURCE_FILE_PATH "${APP_SOURCE_PATH}/Src")

file(GLOB_RECURSE APP_SOURCE "${APP_SOURCE_PATH}/**")
file(GLOB_RECURSE APP_HEADER_FILE "${APP_PROJECT_HEADER_FILE_PATH}/**")
file(GLOB_RECURSE APP_SOURCE_FILE "${APP_PROJECT_SOURCE_FILE_PATH}/**")

add_executable(${APP_PROJECT_NAME} ${APP_SOURCE} ${APP_HEADER_FILE} ${APP_SOURCE_FILE})

target_include_directories(${APP_PROJECT_NAME} PUBLIC ${APP_PROJECT_HEADER_FILE_PATH} ${APP_PROJECT_SOURCE_FILE_PATH})
set_target_properties(${APP_PROJECT_NAME} PROPERTIES OUTPUT_NAME ${PROJECT_NAME})
target_link_libraries(${APP_PROJECT_NAME} PUBLIC Engine)
target_compile_definitions(
    ${APP_PROJECT_NAME}
    PUBLIC
    $<$<CONFIG:Debug>:DEBUG_MODE>
    $<$<CONFIG:Release>:RELEASE_MODE>
    $<$<CONFIG:RelWithDebInfo>:REL_WITH_DEB_INFO_MODE>
    $<$<CONFIG:MinSizeRel>:MINSIZE_REL_MODE>
)

set_property(TARGET ${APP_PROJECT_NAME} PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
set_property(TARGET ${APP_PROJECT_NAME} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")

source_group(TREE "${APP_SOURCE_PATH}" PREFIX "Source" FILES ${APP_SOURCE})
source_group(TREE "${APP_PROJECT_HEADER_FILE_PATH}" PREFIX "Source/Inc" FILES ${APP_HEADER_FILE})
source_group(TREE "${APP_PROJECT_SOURCE_FILE_PATH}" PREFIX "Source/Src" FILES ${APP_SOURCE_FILE})