cmake_minimum_required(VERSION 3.27)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(ENGINE_PROJECT_NAME "Engine")
set(ENGINE_PROJECT_PATH ${CMAKE_CURRENT_SOURCE_DIR})

set(ENGINE_SOURCE_PATH "${ENGINE_PROJECT_PATH}/Source")
set(ENGINE_PROJECT_HEADER_FILE_PATH "${ENGINE_SOURCE_PATH}/Inc")
set(ENGINE_PROJECT_SOURCE_FILE_PATH "${ENGINE_SOURCE_PATH}/Src")

file(GLOB_RECURSE ENGINE_SOURCE "${ENGINE_SOURCE_PATH}/**")
file(GLOB_RECURSE ENGINE_HEADER_FILE "${ENGINE_PROJECT_HEADER_FILE_PATH}/**")
file(GLOB_RECURSE ENGINE_SOURCE_FILE "${ENGINE_PROJECT_SOURCE_FILE_PATH}/**")

add_library(${ENGINE_PROJECT_NAME} STATIC 
    ${ENGINE_SOURCE} 
    ${ENGINE_HEADER_FILE} 
    ${ENGINE_SOURCE_FILE} 
)

target_include_directories(${ENGINE_PROJECT_NAME} PUBLIC ${ENGINE_PROJECT_HEADER_FILE_PATH} ${ENGINE_PROJECT_SOURCE_FILE_PATH})
target_link_libraries(
    ${ENGINE_PROJECT_NAME} PUBLIC
    raylib 
    yaml-cpp::yaml-cpp
    msgpack-cxx
    
)
target_compile_definitions(
    ${ENGINE_PROJECT_NAME}
    PUBLIC
    $<$<CONFIG:Debug>:DEBUG_MODE>
    $<$<CONFIG:Release>:RELEASE_MODE>
    $<$<CONFIG:RelWithDebInfo>:REL_WITH_DEB_INFO_MODE>
    $<$<CONFIG:MinSizeRel>:MINSIZE_REL_MODE>
)

set_property(TARGET ${ENGINE_PROJECT_NAME} PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
set_property(TARGET ${ENGINE_PROJECT_NAME} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")

source_group(TREE "${ENGINE_SOURCE_PATH}" PREFIX "Source" FILES ${ENGINE_SOURCE})
source_group(TREE "${ENGINE_PROJECT_HEADER_FILE_PATH}" PREFIX "Source/Inc" FILES ${ENGINE_HEADER_FILE})
source_group(TREE "${ENGINE_PROJECT_SOURCE_FILE_PATH}" PREFIX "Source/Src" FILES ${ENGINE_SOURCE_FILE})