cmake_minimum_required(VERSION 3.27)

# 프레임위크 세팅 전 서드파티 라이브러리 세팅
add_subdirectory(ThirdParty)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(FRAMEWORK_PROJECT_NAME "Framework")
set(FRAMEWORK_PROJECT_PATH ${CMAKE_CURRENT_SOURCE_DIR})

set(FRAMEWORK_SOURCE_PATH "${FRAMEWORK_PROJECT_PATH}/Source")
set(FRAMEWORK_PROJECT_HEADER_FILE_PATH "${FRAMEWORK_SOURCE_PATH}/Inc")
set(FRAMEWORK_PROJECT_SOURCE_FILE_PATH "${FRAMEWORK_SOURCE_PATH}/Src")

file(GLOB_RECURSE FRAMEWORK_SOURCE "${FRAMEWORK_SOURCE_PATH}/**")
file(GLOB_RECURSE FRAMEWORK_HEADER_FILE "${FRAMEWORK_PROJECT_HEADER_FILE_PATH}/**")
file(GLOB_RECURSE FRAMEWORK_SOURCE_FILE "${FRAMEWORK_PROJECT_SOURCE_FILE_PATH}/**")

add_library(${FRAMEWORK_PROJECT_NAME} STATIC 
    ${FRAMEWORK_SOURCE} 
    ${FRAMEWORK_HEADER_FILE} 
    ${FRAMEWORK_SOURCE_FILE} 
)

target_include_directories(${FRAMEWORK_PROJECT_NAME} PUBLIC ${FRAMEWORK_PROJECT_HEADER_FILE_PATH} ${FRAMEWORK_PROJECT_SOURCE_FILE_PATH})
target_link_libraries(
    ${FRAMEWORK_PROJECT_NAME} PUBLIC
    Pathcch.lib 
    Shlwapi.lib
    raylib 
    yaml-cpp::yaml-cpp
)
target_compile_definitions(
    ${FRAMEWORK_PROJECT_NAME}
    PUBLIC
    $<$<CONFIG:Debug>:DEBUG_MODE>
    $<$<CONFIG:Release>:RELEASE_MODE>
    $<$<CONFIG:RelWithDebInfo>:REL_WITH_DEB_INFO_MODE>
    $<$<CONFIG:MinSizeRel>:MINSIZE_REL_MODE>
)

set_property(TARGET ${FRAMEWORK_PROJECT_NAME} PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
set_property(TARGET ${FRAMEWORK_PROJECT_NAME} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")

source_group(TREE "${FRAMEWORK_SOURCE_PATH}" PREFIX "Source" FILES ${FRAMEWORK_SOURCE})
source_group(TREE "${FRAMEWORK_PROJECT_HEADER_FILE_PATH}" PREFIX "Source/Inc" FILES ${FRAMEWORK_HEADER_FILE})
source_group(TREE "${FRAMEWORK_PROJECT_SOURCE_FILE_PATH}" PREFIX "Source/Src" FILES ${FRAMEWORK_SOURCE_FILE})